extends Node


@onready var coin_sound_w: AudioStreamPlayer = $CoinSoundW
@onready var shoot_w: AudioStreamPlayer = $ShootW
@onready var slime_hurtw: AudioStreamPlayer = $SlimeHurtw
@onready var king_slime_ouch: AudioStreamPlayer = $KingSlimeOuch
@onready var level_up_w: AudioStreamPlayer = $LevelUpW
@onready var upgrade_w: AudioStreamPlayer = $UpgradeW
@onready var game_dev_proj_3_soundtrack: AudioStreamPlayer = $GameDevProj3Soundtrack
